examples/misc/error/execution/overflow1.bfr
let main = $

$build {x; y}

+ x 255
+ y 256